appCD/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress2
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: appc.carlosnascimento.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appc-service
                port:
                  number: 30303
    - host: appd.carlosnascimento.tk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appd-service
                port:
                  number: 30304
